Version 2.9.6
=============

* Improved creation of documentation for all exported objects.

* Added new factory of MPS-encoded functions: `mps_sum_of_exponentials`
  and `mps_heaviside`.

* Introduced `QuantizedInterval` for regular intervals with `2**n` points.

* All MPS-encoded function factories now use `QuantizedInterval`.

* Introduced `InteractionGraph` to construct arbitrarily complex
  Hamiltonians into MPO or sparse matrix form.

* Extended the documentation to include missing functions.